--- a/css/style.css
+++ b/css/style.css
@@ -1063,64 +1063,63 @@ input[type=text1] {
     display: block;
     background: #f6f6f6;
     padding: 30px 12px 37px;
-    text-align: center
 }
 
 .counter-box p, .counter-box span { /*HSO*/
-    margin: 5px 0 0;
     padding: 0;
     color: #ffffff;
-    font-size: 22px;
-    font-weight: 500
+    font-size: 20px;
+    font-weight: 500;
+    text-align: center;
 }
 
 .counter-box i { /*HSO*/
     font-size: 60px;
     margin: 0 0 15px;
-    color: #d2d2d2
+    color: #d2d2d2;
 }
 
 .counter-box span{
-    font-size: 20px;
+    font-size: 29px;
 }
 
 .counter-box.colored1 {
-    background: #68A0B8
+    background: #68A0B8;
 }
 
 .counter-box.colored1 p,
 .counter-box.colored1 i,
 .counter-box.colored1 .counter {
-    color: #fff
+    color: #fff;
 }
 
 .counter-box.colored2 {
-    background: #4F91AD
+    background: #4F91AD;
 }
 
 .counter-box.colored2 p,
 .counter-box.colored2 i,
 .counter-box.colored2 .counter {
-    color: #fff
+    color: #fff;
 }
 .counter-box.colored3 {
-    background: #3681A1
+    background: #3681A1;
 }
 
 .counter-box.colored3 p,
 .counter-box.colored3 i,
 .counter-box.colored3 .counter {
-    color: #fff
+    color: #fff;
 }
 
 .counter-box.colored4 {
-    background: #1D7195
+    background: #1D7195;
 }
 
 .counter-box.colored4 p,
 .counter-box.colored4 i,
 .counter-box.colored4 .counter {
-    color: #fff
+    color: #fff;
 }
 
 .tableReport {
@@ -1157,7 +1156,6 @@ input[type=text1] {
 
 .navbarDep{
     background: #ececec;
-    margin-bottom: 2%;
     border-radius: 5px;
     font-size: 18px;
 }
@@ -1215,12 +1213,10 @@ img{
     border-radius: 12px;
 }
 
-.AddHealthD-option{ /*HSO*/
-    border: 3px solid lightgray;
-    border-radius: 5px;
-    margin: 1%;
-    padding: 2%;
-}
+/*.AddHealthD-option{ !*HSO*!*/
+/*    margin: 1%;*/
+/*    padding: 2%;*/
+/*}*/
 
 /*HSO*/
 #addVaccineModal{
