--- a/css/HSOModule.css
+++ b/css/HSOModule.css
@@ -121,6 +121,17 @@ input[type=text1] {
     color: #fff
 }
 
+.counter-box p, .counter-box span { /*HSO*/
+    padding: 0;
+    color: #ffffff;
+    font-size: 20px;
+    font-weight: 500;
+    text-align: center;
+}
+
+.counter-box span{
+    font-size: 29px;
+}
 .tableReport {
     width: 100%!important;
     background-color: white;
@@ -137,8 +148,6 @@ input[type=text1] {
 .depSum h5{
     padding: 2%;
 }
-
-
 
 .navbarDep{
     background: #ececec;
