modal table fix, action button on table fix for EIR, SSD & HSO

--- a/css/style.css
+++ b/css/style.css
@@ -59,6 +59,13 @@ a:focus {
     border-radius: 12px;
 }
 
+.navbarDep{
+    background: #ececec;
+    border-radius: 5px;
+    font-size: 18px;
+    margin-bottom: 1%;
+}
+
 /*.navbar {*/
 /*    padding: 15px 10px;*/
 /*    background: #fff;*/
