updated HSO Module and updated the notification feature of SSD and Barangay modules

--- a/css/style.css
+++ b/css/style.css
@@ -1129,4 +1129,6 @@ select.sortButton:focus, select.filterButton:focus { /*hso*/
     outline: 0;
 }
 
-
+#dropdownMenuButton::after{
+    content: none;
+}
