time and date on login

--- a/css/login.css
+++ b/css/login.css
@@ -110,6 +110,7 @@ body {
     padding-bottom: 0%;
     background: #647881;
     color: white;
+    display: inline-flex!important;
 }
 
 .input-group-lg {
