--- a/css/style.css
+++ b/css/style.css
@@ -268,12 +268,12 @@ input[type=text]{
 
 #postVacView .content-modal /*EIR, BARANGAY, HSO, personnel*/{
     padding: 0%;
-    width: 81%;
+    width: 60%;
 }
 
 #preVacView .content-modal /*EIR, BARANGAY, HSO, personnel*/{
     padding: 0%;
-    width: 81%;
+    width: 60%;
 }
 
 #postVacView h6, #preVacView h6{
@@ -644,6 +644,12 @@ barangayList{ /*EIR*/
 .tablePatientQueue{ /*barangay*/
     margin-top: 2%;
 }
+.tableContainer{
+    background-color: #ececec;
+    padding: 2%;
+    border-radius: 12px;
+}
+
 
 #searchPatientVaxPer{ /*mayor, personnel*/
     width: 95%;
@@ -868,6 +874,7 @@ input[type=text]:disabled{
     display: block;
     background-color: white;
     width: 100%;
+    margin-top: 1%;
 }
 
 .tableScroll7{
@@ -1086,6 +1093,61 @@ h5~select {
     width: 150px;
 }
 
+.sfDiv select { /*hso*/
+    /* styling */
+    background-color: white;
+    border: thin solid #000000;
+    border-radius: 4px;
+    display: inline-block;
+    font: inherit;
+    line-height: 1.5em;
+    padding: 0.3em 3.5em 0.3em 1em;
+
+    /* reset */
+
+    margin: 0;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+}
+
+
+
+select.sortButton, select.filterButton { /*HSO*/
+    background-image:
+            linear-gradient(45deg, transparent 50%, #f3f3f3 50%),
+            linear-gradient(135deg, #f6f6f6 50%, transparent 50%),
+            linear-gradient(to right, #1D7195, #1D7195);
+    background-position:
+            calc(100% - 20px) calc(1em + 2px),
+            calc(100% - 15px) calc(1em + 2px),
+            100% 0;
+    background-size:
+            5px 5px,
+            5px 5px,
+            2.5em 2.5em;
+    background-repeat: no-repeat;
+}
+
+select.sortButton:focus, select.filterButton:focus { /*hso*/
+    background-image:
+            linear-gradient(45deg, white 50%, transparent 50%),
+            linear-gradient(135deg, transparent 50%, white 50%),
+            linear-gradient(to right, gray, gray);
+    background-position:
+            calc(100% - 15px) 1em,
+            calc(100% - 20px) 1em,
+            100% 0;
+    background-size:
+            5px 5px,
+            5px 5px,
+            2.5em 2.5em;
+    background-repeat: no-repeat;
+    border-color: grey;
+    outline: 0;
+}
 .sfDiv select { /*hso*/
     /* styling */
     background-color: white;
