--- a/css/EIRModule.css
+++ b/css/EIRModule.css
@@ -83,3 +83,17 @@
 .center {
     text-align: center;
 }
+
+
+label.error {
+    color: red;
+    font-size: 1rem;
+    display: block;
+    margin-top: 5px;
+}
+
+input.error {
+    border: 1px solid red;
+    font-weight: 300;
+    color: red;
+}
