Monitoring and screening modal scan qr adjustment

--- a/css/VaccinationPersonnelModule.css
+++ b/css/VaccinationPersonnelModule.css
@@ -26,17 +26,17 @@
     display: flex;
 }
 
-#patientRow h6, #patientRow form{
+#patientRow h6, #qrView h6{
     margin-left: 4%;
 }
 
-#patientRow p{
+#patientRow p, #qrView p{
     margin-left: 7%;
     font-size: 90%;
     color: black;
 }
 
-#patientRow form{
+#patientRow form, #qrView form{
     margin-bottom: 3%;
 }
 
@@ -51,7 +51,7 @@ input[name=vitals]{
     width: 70%;
 }
 
-#patientRow h5 {
+#patientRow h5, #qrView h5 {
     margin-left: 3%;
 }
 
