--- a/css/EIRModule.css
+++ b/css/EIRModule.css
@@ -86,14 +86,8 @@
 
 
 label.error {
-    color: red;
+    color: #B90E0A;
     font-size: 1rem;
     display: block;
     margin-top: 5px;
-}
-
-input.error {
-    border: 1px solid red;
-    font-weight: 300;
-    color: red;
 }
