input validation and modification of edit interface

--- a/css/HSOModule.css
+++ b/css/HSOModule.css
@@ -495,7 +495,11 @@ label.error {
     color: #B90E0A;
     font-size: 1rem;
     display: block;
+    margin-left: 1%;
+    margin-top: 1%;
 }
+
+
 
 
 
