--- a/css/style.css
+++ b/css/style.css
@@ -268,12 +268,12 @@ input[type=text]{
 
 #postVacView .content-modal /*EIR, BARANGAY, HSO, personnel*/{
     padding: 0%;
-    width: 60%;
+    width: fit-content;
 }
 
 #preVacView .content-modal /*EIR, BARANGAY, HSO, personnel*/{
     padding: 0%;
-    width: 60%;
+    width: fit-content;
 }
 
 #postVacView h6, #preVacView h6, #qrView h6{
