--- a/css/style.css
+++ b/css/style.css
@@ -276,6 +276,12 @@ input[type=text]{
     width: fit-content;
 }
 
+#qrView .content-modal {
+    padding: 0%;
+    width: fit-content;
+}
+
+
 #postVacView h6, #preVacView h6, #qrView h6{
     display: inline;
 }
