modified small changes in EIR and Screening module

--- a/css/VaccinationPersonnelModule.css
+++ b/css/VaccinationPersonnelModule.css
@@ -51,6 +51,12 @@ input[name=vitals]{
     width: 50%;
 }
 
+.vitalsInput{
+    border-radius: 5px;
+    border: solid black 1px;
+    width: 50%;
+}
+
 #patientRow h5, #qrView h5 {
     margin-left: 3%;
 }
